# happy-school-app

./: .gitignore  Makefile  happy_school_backend.session  pyproject.toml  reset_db.edgeql  reset_db_async_edgeql.py  run.py
app/: config.py
app/api/v1/auth/: auth.py  dependencies.py  schemas.py
app/api/v1/classes/: classes.py
app/api/v1/dependencies/: db.py
app/api/v1/homeworks/: routes.py
app/api/v1/parents/: routes.py
app/api/v1/students/: classes.py  schemas.py  students.py
app/api/v1/subjects/: subjects.py
app/api/v1/teachers/: teachers.py
app/dependencies/: auth.py  db.py  tg.py
app/dependencies/db_queries/: check_token_async_edgeql.py  create_parent_with_identity.edgeql  create_parent_with_identity_async_edgeql.py  get_email_from_current_identity.edgeql  get_email_from_current_identity_async_edgeql.py  select_current_user.edgeql  select_current_user_async_edgeql.py  select_user_by_email.edgeql  select_user_by_email_async_edgeql.py
app/schemas/: auth.py  classes.py  homeworks.py  parents.py  students.py  subjects.py  teachers.py
app/server/: router.py
app/site/: auth.py  main.py
app/site/db_queries/: select_students_by_parent_id.edgeql  select_students_by_parent_id_async_edgeql.py
app/site/templates/: base.html  base_logged_in.html  index_parent.html  index_teacher.html  login.html  new_review.html  new_review_success_button.html  signup.html  student.html  task.html  tasks_list.html
bot/: anon.session  pyproject.toml  run.py
bot/happy_school_bot/db_queries/: check_child.edgeql  check_child_async_edgeql.py  create_qr_code.edgeql  create_qr_code_async_edgeql.py  find_active_qr_code_by_parent_user_id.edgeql  find_active_qr_code_by_parent_user_id_async_edgeql.py  find_qr_code_by_parent_user_id_async_edgeql.py  get_children_by_parent_user_id.edgeql  get_children_by_parent_user_id_async_edgeql.py  get_qr_code_by_id.edgeql  get_qr_code_by_id_async_edgeql.py  get_user_by_tg_id.edgeql  get_user_by_tg_id_async_edgeql.py
bot/happy_school_bot/scenarios/: admin.py  parent.py
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql  00005.edgeql  00006.edgeql  00007.edgeql
tests/: conftest.py
tests/classes/: test_api.py
tests/homeworks/: test_api.py
tests/parents/: test_api.py
tests/students/: test_api.py
tests/subjects/: test_api.py
tests/teachers/: test_api.py
