[tool.poetry]
name = "happy-school-backend"
version = "0.1.0"
description = ""
authors = ["Alexey Sherchenkov <mr.paralon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
sentry-sdk = "^1.9.5"
edgedb = "^0.24.0"
uvicorn = "^0.18.3"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
bcrypt = "^4.0.0"
orjson = "^3.8.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
